[gd_scene load_steps=15 format=3 uid="uid://cr2pku7fjkgpo"]

[ext_resource type="StyleBox" uid="uid://comkghpj0djcl" path="res://Resources/UI/Panel.tres" id="1_1k7iw"]
[ext_resource type="StyleBox" uid="uid://dlbdmqmnl30sq" path="res://Resources/UI/PanelSelected.tres" id="2_h6n8u"]
[ext_resource type="Script" uid="uid://d486p6delid2" path="res://Scripts/UI/OnlineLevelContainer.gd" id="3_1k7iw"]
[ext_resource type="Script" uid="uid://d63p6qr5a748" path="res://Scripts/UI/AutoScrollContainer.gd" id="5_ajmg3"]
[ext_resource type="Texture2D" uid="uid://dmggnqp6esawy" path="res://Assets/Sprites/UI/DifficultyStars.png" id="6_m23pw"]
[ext_resource type="Script" uid="uid://xem6lai3ufyj" path="res://Scripts/Classes/UI/PackNinePatch.gd" id="6_w0xci"]
[ext_resource type="Texture2D" uid="uid://35who743oaxe" path="res://Assets/Sprites/UI/LSSRatingStars.png" id="7_1k7iw"]
[ext_resource type="Texture2D" uid="uid://dfeu75lbxfkim" path="res://Assets/Sprites/UI/GameStyles.png" id="7_scevv"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="8_vfnya"]
[ext_resource type="JSON" path="res://Assets/Sprites/UI/Cursor.json" id="9_d0564"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="10_x7igx"]

[sub_resource type="Animation" id="Animation_w0xci"]
resource_name = "Load"
length = 1.3333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_1k7iw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h6n8u"]
_data = {
&"Load": SubResource("Animation_w0xci"),
&"RESET": SubResource("Animation_1k7iw")
}

[node name="CustomLevelContainer" type="Button"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/normal = ExtResource("1_1k7iw")
theme_override_styles/pressed = ExtResource("1_1k7iw")
theme_override_styles/hover = ExtResource("2_h6n8u")
theme_override_styles/focus = ExtResource("2_h6n8u")
button_mask = 0
script = ExtResource("3_1k7iw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="LeftHalf" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelIcon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelIcon/Label"]
libraries = {
&"": SubResource("AnimationLibrary_h6n8u")
}
autoplay = "Load"

[node name="Error" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelIcon"]
visible = false
modulate = Color(0.32172796, 0.32172796, 0.32172796, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = " NONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -4

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("5_ajmg3")

[node name="LevelName" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "&&&&&&&&"
uppercase = true

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("5_ajmg3")

[node name="LevelAuthor" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer2"]
unique_name_in_owner = true
modulate = Color(0.47058824, 0.47058824, 0.47058824, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Level Name"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="DifficultyStars" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Star1" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("6_m23pw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star2" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("6_m23pw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star3" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("6_m23pw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star4" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("6_m23pw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star5" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("6_m23pw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="RatingStars" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Star1" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/RatingStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_1k7iw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star2" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/RatingStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_1k7iw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star3" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/RatingStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_1k7iw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star4" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/RatingStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_1k7iw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="Star5" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/RatingStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("7_1k7iw")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="CampaignIcon" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 16)
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("7_scevv")
region_rect = Rect2(0, 0, 42, 16)
script = ExtResource("6_w0xci")
metadata/_custom_type_script = "uid://xem6lai3ufyj"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_vertical = 2

[node name="ResourceSetterNew" type="Node" parent="TextureRect" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("8_vfnya")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("9_d0564")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("10_x7igx")
labels = [NodePath("../MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer/LevelName"), NodePath("../MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer2/LevelAuthor")]
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"

[node name="ThumbnailDownloader" type="HTTPRequest" parent="."]

[connection signal="focus_entered" from="." to="TextureRect" method="show"]
[connection signal="focus_entered" from="." to="." method="set_process" binds= [true]]
[connection signal="focus_exited" from="." to="TextureRect" method="hide"]
[connection signal="focus_exited" from="." to="." method="set_process" binds= [false]]
[connection signal="request_completed" from="ThumbnailDownloader" to="." method="on_request_completed"]
[connection signal="tree_exiting" from="ThumbnailDownloader" to="ThumbnailDownloader" method="cancel_request"]
